--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="spin.js"></script>
   <script type="text/javascript" src="FileSaver.min.js"></script>
   <script type="text/javascript" src="blockly_helper.js"></script>
+  <link rel="stylesheet" href="../../core/popup.css">
   <script>
 
 /**
@@ -447,6 +448,34 @@ function init() {
       <block type="grove_motor_shield"></block>
     </category>
   </xml>
+
+  <!-- code for popup -->
+  <div class="container">
+    <div class="popup" id="popup">
+      <img src="../../media/thumbsUp.png">
+      <h2>Great Job</h2>
+      <p>Youve uploaded your code!</p>
+      <button type="button" onclick="closePopup()">Continue</button>
+    </div>
+  </div>
+  <script>
+    let popup = document.getElementById("popup");
+    
+    function uploadFunctions(){
+      uploadClick();
+      openPopup();
+    }
+    
+    function openPopup(){
+      popup.classList.add("open-popup");
+    }
+
+    function closePopup(){
+      popup.classList.remove("open-popup");
+    }
+  </script>
+
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
