--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -16,6 +16,9 @@
 
 /**
  * List of tab names.
+ * 
+ * TESTTESTTESTTESTTTESTTTTTTTTT
+ * 
  * @private
  */
 var TABS_ = ['blocks', 'arduino', 'xml'];
