--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -457,7 +457,7 @@ function init() {
     <div class="popup" id="popup">
       <img src="../../media/thumbsUp.png">
       <h2>Great Job</h2>
-      <p>Youve uploaded your code!</p>
+      <p>You&apos;ve uploaded your code!</p>
       <button type="button" onclick="closePopup()">Continue</button>
     </div>
   </div>
