--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -182,7 +182,7 @@ function init() {
   </script>
   <style>
     html, body {
-      height: 100%;
+      height: calc(100vh - 30px);
     }
     body {
       background-color: #fff;
