Trying to fix the code

--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -521,10 +521,12 @@ function init() {
     }
 
     function useCaseOne(){
+      hintpopup.classList.remove("open-popup");
       caseone.classlist.add("open-popup")
     }
 
     function useCaseTwo(){
+      hintpopup.classList.remove("open-popup");
       casetwo.classlist.add("open-popup")
     }
     
