Updating the button use case hints

--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -527,7 +527,7 @@ function init() {
   <div class="container">
     <div class="popup" id="usecasetwo">
       <h3>Hint 1:</h3>
-      <h4>...</h4>
+      <h4>Remember that a button being in a high state means it is pressed and low means it is not!</h4>
       <button type="button" onclick="CaseTwoHintTwo()">Another hint</button>
       <button type="button" onclick="closeHintPopupTwo()">Close</button>
     </div>
@@ -536,7 +536,7 @@ function init() {
   <div class="container">
     <div class="popup" id="usecasetwo_hinttwo">
       <h3>Hint 2:</h3>
-      <h4>...</h4>
+      <h4>You can use a block with if, do and else to set when the lights should turn on.</h4>
       <button type="button" onclick="CaseTwoHintThree()">Another hint</button>
       <button type="button" onclick="closeHintPopupTwoHintTwo()">Try again!</button>
     </div>
@@ -546,7 +546,7 @@ function init() {
     <div class="popup" id="usecasetwo_hintthree">
       <h3>Hint 3:</h3>
       <h4>Take a look at the colours of the blocks and the order that you should put them in! need to put right picture in.</h4>
-      <img class="img2" src="../../media/useCaseSoundSetUp.png">
+      <img class="img2" src="../../media/Use case button (2).png">
       <button type="button" onclick="closeHintPopupTwoHintThree()">Try again!</button>
     </div>
   </div>
