--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -490,13 +490,13 @@
     <div class="popup" id="uploadPopup">
       <img src="../../media/thumbsUp.png">
       <h2>Great Job</h2>
-      <p>You&apos;ve uploaded your code!</p>
+      <p>You have uploaded your code!</p>
       <button type="button" onclick="closePopup()">Continue</button>
     </div>
   <!-- Code for saving arduino code popup -->
     <div class="popup" id="arduinoPopup">
       <img src="../../media/thumbsUp.png">
-      <h2>You&apos;ve saved the arduino code</h2>
+      <h2>You have saved the arduino code</h2>
       <p>Well done, keep working on it!</p>
       <button type="button" onclick="closePopup()">Continue</button>
     </div>
